# AI_lab_6

./: CMakeLists.txt  README.md  main.cpp  resource.qrc
game/: CMakeLists.txt  game.cpp  game.h  game.ui
